--- a/Maybi_AgeOfWar.html
+++ b/Maybi_AgeOfWar.html
@@ -94,8 +94,6 @@
       }
 
       embed {
-        height: 450px;
-        width: 650px;
         border-style: solid;
         border-width: 4px;
         border-radius: 0px;
@@ -178,7 +176,7 @@
     <div class="gameContainer">
       <center>
         <h3 style="font-family: Montserrat">Age of War</h3>
-        <embed src="Maybi_AgeOfWar.swf" id="game"><br>
+        <embed src="Maybi_AgeOfWar.swf" id="game" style="height: 450px; width: 650px;"><br>
         <button onclick="shrinkGame()" style="background-color: rgb(255, 160, 160)">&#8594;&#8592;</button>
         <button onclick="growGame()" style="background-color: rgb(160, 255, 160)">&#8592;&#8594;</button>
       </center>
