--- a/Maybi_SushiCat.html
+++ b/Maybi_SushiCat.html
@@ -29,6 +29,7 @@
       <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
       <a href="Maybi_Flight.html"><div>Flight</div></a>
       <a href="Maybi_Jacksmith.html"><div>Jacksmith</div></a>
+      <a href="Maybi_KingdomRush.html"><div>Kingdom Rush</div></a>
       <a href="Maybi_Raze.html"><div>Raze</div></a>
       <a href="Maybi_StickWar.html"><div>Stick War</div></a>
       <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
