--- a/Maybi_FancyPants2.html
+++ b/Maybi_FancyPants2.html
@@ -13,6 +13,7 @@ html lang="en">
 
     <div class="sidebarNav" id="sidebarNav">
       <h3 id="sidebarNavTitle">Play Games</h3>
+      <a href="Maybi_AgeOfDefense3.html"><div>Age of Defense 3</div></a>
       <a href="Maybi_AgeOfWar.html"><div>Age of War</div></a>
       <a href="Maybi_AgeOfWar2.html"><div>Age of War 2</div></a>
       <a href="Maybi_BTD3.html"><div>Bloons TD 3</div></a>
