--- a/index.html
+++ b/index.html
@@ -43,24 +43,25 @@
      }
 
      .previewLinks {
-       color: rgb(0, 0, 0);
+       color: rgb(255, 255, 255);
        margin: 0px;
        margin-bottom: 50px;
        width: 90%;
      }
 
      .previewLinks a {
-       background-image: linear-gradient(145deg, rgba(255, 255, 255, 0.4), rgba(170, 170, 170, 0.4));
+       background-image: linear-gradient(-45deg, rgb(255, 255, 255), rgb(210, 210, 210));
        display: inline-block;
        width: 200px;
        height: 100px;
        margin: 10px;
        line-height: 100px;
-       color: black;
+       color: rgb(50, 50, 50);
        border-radius: 25px;
        font-family: Montserrat;
-       border: solid rgba(0, 0, 0, 0.5); 4px;
+       border: hidden;
        transition: 0.3s;
+       box-shadow: 5px 5px 10px black;
      }
 
      .previewLinks a:hover {
@@ -68,8 +69,8 @@
      }
 
      @keyframes fadeIn {
-       from { opacity: 0; }
-       to   { opacity: 1; }
+       from {opacity: 0;}
+       to {opacity: 1;}
      }
 
      @keyframes slideIn {
