--- a/Maybi_AgeOfDefense3.html
+++ b/Maybi_AgeOfDefense3.html
@@ -2,158 +2,35 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="Maybi_GameScripts.js"></script>
-    <style>
-    body {
-      margin: 0px;
-      background-image: linear-gradient(45deg, rgb(255, 255, 255), rgb(180, 180, 180));
-    }
-
-    a {
-      text-decoration: none;
-    }
-
-    .topbarNav {
-      background-image: linear-gradient(0deg, rgb(55, 55, 65), rgb(40, 40, 50));
-      height: 80px;
-      width: 100%;
-      position: fixed;
-      top: 0px;
-      font-family: Montserrat;
-      color: rgb(255, 255, 255);
-      display: inline-block;
-      z-index: 1;
-    }
-
-    .topbarNav h1 {
-      font-size: 30px;
-      top: 0px;
-      left: 50px;
-      padding: 0px;
-      cursor: pointer;
-      position: fixed;
-    }
-
-    .sidebarNav {
-      background-image: linear-gradient(0deg, rgb(255, 210, 210), rgb(255, 255, 210), rgb(210, 255, 210), rgb(210, 255, 255), rgb(210, 210, 255), rgb(255, 210, 255), rgb(255, 210, 210));
-      width: 200px;
-      height: calc(100% - 80px);
-      position: fixed;
-      top: 80px;
-      border-right: solid;
-      border-width: 4px;
-      border-color: rgb(55, 55, 65);
-      color: rgba(0, 0, 0, 0.7);
-      font-family: Montserrat;
-      cursor: default;
-      overflow: auto;
-      z-index: 1;
-      white-space: nowrap;
-      filter: hue-rotate(0deg);
-      animation: re-color 1s;
-    }
-
-    @keyframes re-color {
-      from {filter: hue-rotate(0deg);}
-      to {filter: hue-rotate(360deg);}
-    }
-
-    .sidebarNav::-webkit-scrollbar {
-      display: none;
-    }
-
-    .sidebarNav h3 {
-      text-align: center;
-      margin: 25px 0px;
-      font-size: 20px;
-      text-decoration: underline;
-    }
-
-    .sidebarNav a {
-      margin: 0px;
-      color: rgba(0, 0, 0, 0.7);
-      font-size: 14px;
-      transition: 0.3s;
-    }
-
-    .sidebarNav div:hover {
-      background-color: rgba(0, 0, 0, 0.25);
-      transition: 0.3s;
-    }
-
-    .sidebarNav div {
-      width: 100%;
-      margin: 0px;
-      padding: 5px 20px;
-      cursor: pointer;
-    }
-
-    .gameContainer {
-      margin-left: 200px;
-      margin-top: 100px;
-      width: calc(100%-360px);
-      height: calc(100%-80px);
-      overflow: hidden;
-    }
-
-    embed {
-      border-style: solid;
-      border-width: 4px;
-      border-radius: 0px;
-      border-color: rgb(85, 85, 85);
-      transition: 0.75s;
-    }
-
-    @keyframes fadein {
-      from {opacity: 0}
-      to {opacity: 1}
-    }
-
-    button {
-      margin-top: 25px;
-      height: 50px;
-      width: 100px;
-      color: black;
-      font-size: 14px;
-      background-color: rgb(160, 160, 255);
-      border: solid rgba(0, 0, 0, 0);
-      border-radius: 5px;
-      outline: none;
-      cursor: pointer;
-    }
-
-    button:hover {
-      filter: brightness(85%);
-    }
-    </style>
+    <link rel="stylesheet" href="Maybi_GameStyles.css">
   </head>
 
   <body>
-
     <div class="topbarNav" id="topbarNav">
       <h1 id="siteTitle" onclick="titleRedirect()">Maybi Games</h1>
     </div>
-
     <div class="sidebarNav" id="sidebarNav">
       <h3 id="sidebarNavTitle">Play Games</h3>
-      <a href="Maybi_AgeOfDefense3.html"><div>Age of Defense 3</div></a>
-      <a href="Maybi_AgeOfWar.html"><div>Age of War</div></a>
-      <a href="Maybi_AgeOfWar2.html"><div>Age of War 2</div></a>
-      <a href="Maybi_BTD3.html"><div>Bloons TD 3</div></a>
-      <a href="Maybi_BTD4.html"><div>Bloons TD 4</div></a>
-      <a href="Maybi_BTD5.html"><div>Bloons TD 5</div></a>
-      <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
-      <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
-      <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
-      <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
-      <a href="Maybi_Flight.html"><div>Flight</div></a>
-      <a href="Maybi_Jacksmith.html"><div>Jacksmith</div></a>
-      <a href="Maybi_KingdomRush.html"><div>Kingdom Rush</div></a>
-      <a href="Maybi_Raze.html"><div>Raze</div></a>
-      <a href="Maybi_StickWar.html"><div>Stick War</div></a>
-      <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
-      <a href="Maybi_SushiCat.html"><div>Sushi Cat</div></a>
-      <a href="Maybi_TankTrouble.html"><div>Tank Trouble</div></a>
-      <a href="Maybi_Tetris.html"><div>Tetris</div></a>
+      <a href="AgeOfDefense3"><div>Age of Defense 3</div></a>
+      <a href="AgeOfWar"><div>Age of War</div></a>
+      <a href="AgeOfWar2"><div>Age of War 2</div></a>
+      <a href="BTD3"><div>Bloons TD 3</div></a>
+      <a href="BTD4"><div>Bloons TD 4</div></a>
+      <a href="BTD5"><div>Bloons TD 5</div></a>
+      <a href="ClickerHeroes"><div>Clicker Heroes</div></a>
+      <a href="DuckHunt"><div>Duck Hunt</div></a>
+      <a href="EarToDie"><div>Earn To Die</div></a>
+      <a href="FancyPants"><div>Fancy Pants</div></a>
+      <a href="FancyPants2"><div>Fancy Pants 2</div></a>
+      <a href="Flight"><div>Flight</div></a>
+      <a href="Jacksmith"><div>Jacksmith</div></a>
+      <a href="KingdomRush"><div>Kingdom Rush</div></a>
+      <a href="Raze"><div>Raze</div></a>
+      <a href="StickWar"><div>Stick War</div></a>
+      <a href="StickWar2"><div>Stick War 2</div></a>
+      <a href="SushiCat"><div>Sushi Cat</div></a>
+      <a href="TankTrouble"><div>Tank Trouble</div></a>
+      <a href="Tetris"><div>Tetris</div></a>
     </div>
     <div class="gameContainer">
       <center>
