--- a/Maybi_AgeOfWar.html
+++ b/Maybi_AgeOfWar.html
@@ -1,37 +1,35 @@
 <html lang="en">
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="Maybi_GameStyles.css">
     <script src="Maybi_GameScripts.js"></script>
+    <link rel="stylesheet" href="Maybi_GameStyles.css">
   </head>
-
   <body>
-
     <div class="topbarNav" id="topbarNav">
       <h1 id="siteTitle" onclick="titleRedirect()">Maybi Games</h1>
     </div>
-
     <div class="sidebarNav" id="sidebarNav">
       <h3 id="sidebarNavTitle">Play Games</h3>
-      <a href="Maybi_AgeOfDefense3.html"><div>Age of Defense 3</div></a>
-      <a href="Maybi_AgeOfWar.html"><div>Age of War</div></a>
-      <a href="Maybi_AgeOfWar2.html"><div>Age of War 2</div></a>
-      <a href="Maybi_BTD3.html"><div>Bloons TD 3</div></a>
-      <a href="Maybi_BTD4.html"><div>Bloons TD 4</div></a>
-      <a href="Maybi_BTD5.html"><div>Bloons TD 5</div></a>
-      <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
-      <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
-      <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
-      <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
-      <a href="Maybi_Flight.html"><div>Flight</div></a>
-      <a href="Maybi_Jacksmith.html"><div>Jacksmith</div></a>
-      <a href="Maybi_KingdomRush.html"><div>Kingdom Rush</div></a>
-      <a href="Maybi_Raze.html"><div>Raze</div></a>
-      <a href="Maybi_StickWar.html"><div>Stick War</div></a>
-      <a href="Maybi_StickWar2.html"><div>Stick War 2</div></a>
-      <a href="Maybi_SushiCat.html"><div>Sushi Cat</div></a>
-      <a href="Maybi_TankTrouble.html"><div>Tank Trouble</div></a>
-      <a href="Maybi_Tetris.html"><div>Tetris</div></a>
+      <a href="AgeOfDefense3"><div>Age of Defense 3</div></a>
+      <a href="AgeOfWar"><div>Age of War</div></a>
+      <a href="AgeOfWar2"><div>Age of War 2</div></a>
+      <a href="BTD3"><div>Bloons TD 3</div></a>
+      <a href="BTD4"><div>Bloons TD 4</div></a>
+      <a href="BTD5"><div>Bloons TD 5</div></a>
+      <a href="ClickerHeroes"><div>Clicker Heroes</div></a>
+      <a href="DuckHunt"><div>Duck Hunt</div></a>
+      <a href="EarToDie"><div>Earn To Die</div></a>
+      <a href="FancyPants"><div>Fancy Pants</div></a>
+      <a href="FancyPants2"><div>Fancy Pants 2</div></a>
+      <a href="Flight"><div>Flight</div></a>
+      <a href="Jacksmith"><div>Jacksmith</div></a>
+      <a href="KingdomRush"><div>Kingdom Rush</div></a>
+      <a href="Raze"><div>Raze</div></a>
+      <a href="StickWar"><div>Stick War</div></a>
+      <a href="StickWar2"><div>Stick War 2</div></a>
+      <a href="SushiCat"><div>Sushi Cat</div></a>
+      <a href="TankTrouble"><div>Tank Trouble</div></a>
+      <a href="Tetris"><div>Tetris</div></a>
     </div>
     <div class="gameContainer">
       <center>
