--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
    <center>
      <h1>Maybi you want to play some games?</h1>
      <div class="previewLinks" id="homeGames">
-       <a href="AgeOfDefense3" style="animation: fadeIn 1s;">Age of Defense 3</a>
-       <a href="AgeOfWar" style="animation: fadeIn 1s;">Age of War</a>
-       <a href="AgeOfWar2" style="animation: fadeIn 1.1s;">Age of War 2</a>
-       <a href="BTD3" style="animation: fadeIn 1.2s;">Bloons TD 3</a>
-       <a href="BTD4" style="animation: fadeIn 1.3s;">Bloons TD 4</a>
-       <a href="BTD5" style="animation: fadeIn 1.4s;">Bloons TD 5</a>
-       <a href="ClickerHeroes" style="animation: fadeIn 1.5s;">Clicker Heroes</a>
-       <a href="DuckHunt" style="animation: fadeIn 1.6s;">Duck Hunt</a>
-       <a href="FancyPants" style="animation: fadeIn 1.7s;">Fancy Pants</a>
-       <a href="FancyPants2" style="animation: fadeIn 1.8s;">Fancy Pants 2</a>
-       <a href="Flight" style="animation: fadeIn 1.9s;">Flight</a>
-       <a href="Jacksmith" style="animation: fadeIn 2s;">Jacksmith</a>
-       <a href="KingdomRush" style="animation: fadeIn 2.1s;">Kingdom Rush</a>
-       <a href="Raze" style="animation: fadeIn 2.2s;">Raze</a>
-       <a href="StickWar" style="animation: fadeIn 2.3s;">Stick War</a>
-       <a href="StickWar2" style="animation: fadeIn 2.4s;">Stick War 2</a>
-       <a href="SushiCat" style="animation: fadeIn 2.5s;">Sushi Cat</a>
-       <a href="TankTrouble" style="animation: fadeIn 2.6s;">Tank Trouble</a>
-       <a href="Tetris" style="animation: fadeIn 2.7s;">Tetris</a>
+       <a href="Maybi_AgeOfDefense3.html" style="animation: fadeIn 1s;">Age of Defense 3</a>
+       <a href="Maybi_AgeOfWar.html" style="animation: fadeIn 1s;">Age of War</a>
+       <a href="Maybi_AgeOfWar2.html" style="animation: fadeIn 1.1s;">Age of War 2</a>
+       <a href="Maybi_BTD3.html" style="animation: fadeIn 1.2s;">Bloons TD 3</a>
+       <a href="Maybi_BTD4.html" style="animation: fadeIn 1.3s;">Bloons TD 4</a>
+       <a href="Maybi_BTD5.html" style="animation: fadeIn 1.4s;">Bloons TD 5</a>
+       <a href="Maybi_ClickerHeroes.html" style="animation: fadeIn 1.5s;">Clicker Heroes</a>
+       <a href="Maybi_DuckHunt.html" style="animation: fadeIn 1.6s;">Duck Hunt</a>
+       <a href="Maybi_FancyPants.html" style="animation: fadeIn 1.7s;">Fancy Pants</a>
+       <a href="Maybi_FancyPants2.html" style="animation: fadeIn 1.8s;">Fancy Pants 2</a>
+       <a href="Maybi_Flight.html" style="animation: fadeIn 1.9s;">Flight</a>
+       <a href="Maybi_Jacksmith.html" style="animation: fadeIn 2s;">Jacksmith</a>
+       <a href="Maybi_KingdomRush.html" style="animation: fadeIn 2.1s;">Kingdom Rush</a>
+       <a href="Maybi_Raze.html" style="animation: fadeIn 2.2s;">Raze</a>
+       <a href="Maybi_StickWar.html" style="animation: fadeIn 2.3s;">Stick War</a>
+       <a href="Maybi_StickWar2.html" style="animation: fadeIn 2.4s;">Stick War 2</a>
+       <a href="Maybi_SushiCat.html" style="animation: fadeIn 2.5s;">Sushi Cat</a>
+       <a href="Maybi_TankTrouble.html" style="animation: fadeIn 2.6s;">Tank Trouble</a>
+       <a href="Maybi_Tetris.html" style="animation: fadeIn 2.7s;">Tetris</a>
      </div>
    </center>
  </body>
