--- a/Maybi_AgeOfWar2.html
+++ b/Maybi_AgeOfWar2.html
@@ -18,6 +18,7 @@
       <a href="Maybi_BTD5.html"><div>Bloons TD 5</div></a>
       <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
       <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
+      <a href="Maybi_EarnToDie.html"><div>Earn To Die</div></a>
       <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
       <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
       <a href="Maybi_Flight.html"><div>Flight</div></a>
