--- a/Maybi_FancyPants2.html
+++ b/Maybi_FancyPants2.html
@@ -1,16 +1,13 @@
-html lang="en">
+<html lang="en">
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="Maybi_GameStyles.css">
     <script src="Maybi_GameScripts.js"></script>
   </head>
-
   <body>
-
     <div class="topbarNav" id="topbarNav">
       <h1 id="siteTitle" onclick="titleRedirect()">Maybi Games</h1>
     </div>
-
     <div class="sidebarNav" id="sidebarNav">
       <h3 id="sidebarNavTitle">Play Games</h3>
       <a href="Maybi_AgeOfDefense3.html"><div>Age of Defense 3</div></a>
@@ -21,6 +18,7 @@ html lang="en">
       <a href="Maybi_BTD5.html"><div>Bloons TD 5</div></a>
       <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
       <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
+      <a href="Maybi_EarnToDie.html"><div>Earn To Die</div></a>
       <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
       <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
       <a href="Maybi_Flight.html"><div>Flight</div></a>
