--- a/Maybi_KingdomRush.html
+++ b/Maybi_KingdomRush.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" href="Maybi_GameStyles.css">
     <script src="Maybi_GameScripts.js"></script>
   </head>
-
   <body>
     <div class="topbarNav" id="topbarNav">
       <h1 id="siteTitle" onclick="titleRedirect()">Maybi Games</h1>
@@ -19,6 +18,7 @@
       <a href="Maybi_BTD5.html"><div>Bloons TD 5</div></a>
       <a href="Maybi_ClickerHeroes.html"><div>Clicker Heroes</div></a>
       <a href="Maybi_DuckHunt.html"><div>Duck Hunt</div></a>
+      <a href="Maybi_EarnToDie.html"><div>Earn To Die</div></a>
       <a href="Maybi_FancyPants.html"><div>Fancy Pants</div></a>
       <a href="Maybi_FancyPants2.html"><div>Fancy Pants 2</div></a>
       <a href="Maybi_Flight.html"><div>Flight</div></a>
