--- a/index.html
+++ b/index.html
@@ -120,17 +120,25 @@
        <a href="Maybi_ClickerHeroes.html" style="animation: fadeIn 1.5s;">Clicker Heroes</a>
        <a href="Maybi_DuckHunt.html" style="animation: fadeIn 1.6s;">Duck Hunt</a>
        <a href="Maybi_EarnToDie.html" style="animation: fadeIn 1.7s;">Earn To Die</a>
-       <a href="Maybi_FancyPants.html" style="animation: fadeIn 1.8s;">Fancy Pants</a>
-       <a href="Maybi_FancyPants2.html" style="animation: fadeIn 1.9s;">Fancy Pants 2</a>
-       <a href="Maybi_Flight.html" style="animation: fadeIn 2.0s;">Flight</a>
-       <a href="Maybi_Jacksmith.html" style="animation: fadeIn 2.1s;">Jacksmith</a>
-       <a href="Maybi_KingdomRush.html" style="animation: fadeIn 2.2s;">Kingdom Rush</a>
-       <a href="Maybi_Raze.html" style="animation: fadeIn 2.3s;">Raze</a>
-       <a href="Maybi_StickWar.html" style="animation: fadeIn 2.4s;">Stick War</a>
-       <a href="Maybi_StickWar2.html" style="animation: fadeIn 2.5s;">Stick War 2</a>
-       <a href="Maybi_SushiCat.html" style="animation: fadeIn 2.6s;">Sushi Cat</a>
-       <a href="Maybi_TankTrouble.html" style="animation: fadeIn 2.7s;">Tank Trouble</a>
-       <a href="Maybi_Tetris.html" style="animation: fadeIn 2.8s;">Tetris</a>
+       <a href="Maybi_EarnToDie2012.html" style="animation: fadeIn 1.8s;">Earn To Die 2012</a>
+       <a href="Maybi_FancyPants.html" style="animation: fadeIn 1.9s;">Fancy Pants</a>
+       <a href="Maybi_FancyPants2.html" style="animation: fadeIn 2s;">Fancy Pants 2</a>
+       <a href="Maybi_Flight.html" style="animation: fadeIn 2.1s;">Flight</a>
+       <a href="Maybi_Jacksmith.html" style="animation: fadeIn 2.2s;">Jacksmith</a>
+       <a href="Maybi_KingdomRush.html" style="animation: fadeIn 2.3s;">Kingdom Rush</a>
+       <a href="Maybi_Burgeria.html" style="animation: fadeIn 2.4s;">Papa's Burgeria</a>
+       <a href="Maybi_Cupcakeria.html" style="animation: fadeIn 2.5s;">Papa's Cupcakeria</a>
+       <a href="Maybi_Freezeria.html" style="animation: fadeIn 2.6s;">Papa's Freezeria</a>
+       <a href="Maybi_HotDoggeria.html" style="animation: fadeIn 2.7s;">Papa's Doggeria</a>
+       <a href="Maybi_Pancakeria.html" style="animation: fadeIn 2.8s;">Papa's Pancakeria</a>
+       <a href="Maybi_Pizzaria.html" style="animation: fadeIn 2.9s;">Papa's Pizzaria</a>
+       <a href="Maybi_Wingeria.html" style="animation: fadeIn 3s;">Papa's Wingeria</a>
+       <a href="Maybi_Raze.html" style="animation: fadeIn 3.1s;">Raze</a>
+       <a href="Maybi_StickWar.html" style="animation: fadeIn 3.2s;">Stick War</a>
+       <a href="Maybi_StickWar2.html" style="animation: fadeIn 3.3s;">Stick War 2</a>
+       <a href="Maybi_SushiCat.html" style="animation: fadeIn 3.4s;">Sushi Cat</a>
+       <a href="Maybi_TankTrouble.html" style="animation: fadeIn 3.5s;">Tank Trouble</a>
+       <a href="Maybi_Tetris.html" style="animation: fadeIn 3.6s;">Tetris</a>
      </div>
    </center>
  </body>
