--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
    <center>
      <h1>Maybi you want to play some games?</h1>
      <div class="previewLinks" id="homeGames">
+       <a href="Maybi_2048.html" style="animation: fadeIn 1s;">2048</a>
        <a href="Maybi_AgeOfDefense3.html" style="animation: fadeIn 1s;">Age of Defense 3</a>
        <a href="Maybi_AgeOfWar.html" style="animation: fadeIn 1s;">Age of War</a>
        <a href="Maybi_AgeOfWar2.html" style="animation: fadeIn 1.1s;">Age of War 2</a>
@@ -119,15 +120,26 @@
        <a href="Maybi_BTD5.html" style="animation: fadeIn 1.4s;">Bloons TD 5</a>
        <a href="Maybi_ClickerHeroes.html" style="animation: fadeIn 1.5s;">Clicker Heroes</a>
        <a href="Maybi_DuckHunt.html" style="animation: fadeIn 1.6s;">Duck Hunt</a>
+       <a href="Maybi_DuckLife.html" style="animation: fadeIn 1.6s;">Duck Life</a>
+       <a href="Maybi_DuckLife2.html" style="animation: fadeIn 1.6s;">Duck Life 2</a>
+       <a href="Maybi_DuckLife3.html" style="animation: fadeIn 1.6s;">Duck Life 3</a>
+       <a href="Maybi_DuckLife4.html" style="animation: fadeIn 1.6s;">Duck Life 4</a>
+       <a href="Maybi_DummiesNeverFail.html" style="animation: fadeIn 1.6s;">Dummies Never Fail</a>
        <a href="Maybi_EarnToDie.html" style="animation: fadeIn 1.7s;">Earn To Die</a>
        <a href="Maybi_EarnToDie2.html" style="animation: fadeIn 1.8s;">Earn To Die 2</a> 
        <a href="Maybi_EarnToDie2012.html" style="animation: fadeIn 1.9s;">Earn To Die 2012</a>
        <a href="Maybi_EarnToDie2012Part2.html" style="animation: fadeIn 2.0s;">Earn To Die 2012 Part 2</a>
+       <a href="Maybi_ElectricMan.html" style="animation: fadeIn 1.6s;">Electric Man</a>
        <a href="Maybi_FancyPants.html" style="animation: fadeIn 2.1s;">Fancy Pants</a>
        <a href="Maybi_FancyPants2.html" style="animation: fadeIn 2.2s;">Fancy Pants 2</a>
+       <a href="Maybi_CrystalTemple.html" style="animation: fadeIn 1.6s;">FB & WG Crystal Temple</a>
+       <a href="Maybi_ForestTemple.html" style="animation: fadeIn 1.6s;">FB & WG Forest Temple</a>
+       <a href="Maybi_IceTemple.html" style="animation: fadeIn 1.6s;">FB & WG Ice Temple</a>
+       <a href="Maybi_LightTemple.html" style="animation: fadeIn 1.6s;">FB & WG Light Temple</a>
        <a href="Maybi_Flight.html" style="animation: fadeIn 2.3s;">Flight</a>
        <a href="Maybi_Jacksmith.html" style="animation: fadeIn 2.4s;">Jacksmith</a>
        <a href="Maybi_KingdomRush.html" style="animation: fadeIn 2.5s;">Kingdom Rush</a>
+       <a href="Maybi_Pacman.html" style="animation: fadeIn 2.5s;">Pacman</a>
        <a href="Maybi_Burgeria.html" style="animation: fadeIn 2.6s;">Papa's Burgeria</a>
        <a href="Maybi_Cupcakeria.html" style="animation: fadeIn 2.7s;">Papa's Cupcakeria</a>
        <a href="Maybi_Freezeria.html" style="animation: fadeIn 2.8s;">Papa's Freezeria</a>
@@ -136,6 +148,10 @@
        <a href="Maybi_Pizzaria.html" style="animation: fadeIn 3.1s;">Papa's Pizzaria</a>
        <a href="Maybi_Wingeria.html" style="animation: fadeIn 3.2s;">Papa's Wingeria</a>
        <a href="Maybi_Raze.html" style="animation: fadeIn 3.3s;">Raze</a>
+       <a href="Maybi_RedBall4.html" style="animation: fadeIn 3.3s;">Red Ball 4</a>
+       <a href="Maybi_RedBall4Vol2.html" style="animation: fadeIn 3.3s;">Red Ball 4 Vol 2</a>
+       <a href="Maybi_RedBall4Vol3.html" style="animation: fadeIn 3.3s;">Red Ball 4 Vol 3</a>
+       <a href="Maybi_RedBall5.html" style="animation: fadeIn 3.3s;">Red Ball 5</a>
        <a href="Maybi_ReturnMan2.html" style="animation: fadeIn 3.4s;">Return Man 2</a>
        <a href="Maybi_Run.html" style="animation: fadeIn 3.5s;">Run</a>
        <a href="Maybi_Run2.html" style="animation: fadeIn 3.6s;">Run 2</a>
